[package]
name = "msb"
version = "0.1.2"
edition = "2021"
authors = ["prodbysky"]
license = "MIT"
description = "Build system in Rust"
repository = "https://github.com/prodbysky/msb"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
error-stack = "0.5.0"
nom = "8.0.0"
thiserror = "2.0.11"
